plugin speech recognition

--- a/app/src-cordova/package.json
+++ b/app/src-cordova/package.json
@@ -19,13 +19,15 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-bluetoothclassic-serial": {}
+      "cordova-plugin-bluetoothclassic-serial": {},
+      "cordova-plugin-speech": {}
     },
     "platforms": [
       "android"
     ]
   },
   "dependencies": {
-    "cordova-plugin-bluetoothclassic-serial": "^1.0.2"
+    "cordova-plugin-bluetoothclassic-serial": "^1.0.2",
+    "cordova-plugin-speech": "0.0.4"
   }
 }
