--- a/app/src-cordova/package.json
+++ b/app/src-cordova/package.json
@@ -14,12 +14,14 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-bluetoothclassic-serial": {}
+      "cordova-plugin-bluetoothclassic-serial": {},
+      "cordova-plugin-speechrecognition": {}
     },
     "platforms": [
       "android"
