--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,8 @@
     "cordova-plugin-bluetoothclassic-serial": "^1.0.2",
     "core-js": "^3.6.5",
     "eslint": "^7.19.0",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
