--- a/app/src-cordova/package.json
+++ b/app/src-cordova/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.4"
@@ -21,15 +22,13 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-bluetoothclassic-serial": {},
       "cordova-plugin-speechrecognition": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-bluetooth-serial": {}
     },
     "platforms": [
       "android"
     ]
   },
-  "dependencies": {
-    "cordova-plugin-bluetoothclassic-serial": "^1.0.2"
-  }
+  "dependencies": {}
 }
